config/iptables/ip6tables.up.rules
# Generated by ip6tables-save v1.6.1 on Mon May 22 23:40:37 2017
*nat
:PREROUTING ACCEPT [4153:712990]
:INPUT ACCEPT [2:168]
:OUTPUT ACCEPT [1:96]
:POSTROUTING ACCEPT [494:37642]
COMMIT
# Completed on Mon May 22 23:40:37 2017
# Generated by ip6tables-save v1.6.1 on Mon May 22 23:40:37 2017
*security
:INPUT ACCEPT [219:21017]
:FORWARD ACCEPT [21291:15237283]
:OUTPUT ACCEPT [117:16413]
COMMIT
# Completed on Mon May 22 23:40:37 2017
# Generated by ip6tables-save v1.6.1 on Mon May 22 23:40:37 2017
*raw
:PREROUTING ACCEPT [25299:15942683]
:OUTPUT ACCEPT [117:16413]
COMMIT
# Completed on Mon May 22 23:40:37 2017
# Generated by ip6tables-save v1.6.1 on Mon May 22 23:40:37 2017
*mangle
:PREROUTING ACCEPT [25299:15942683]
:INPUT ACCEPT [219:21017]
:FORWARD ACCEPT [21410:15245622]
:OUTPUT ACCEPT [117:16413]
:POSTROUTING ACCEPT [21408:15253696]
COMMIT
# Completed on Mon May 22 23:40:37 2017
# Generated by ip6tables-save v1.6.1 on Mon May 22 23:40:37 2017
*filter
:INPUT ACCEPT [219:21017]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [117:16413]
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -i eth0 -o zaborona -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 2620:10f:d000::/44 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 2a02:6b8::/32 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 2a00:1148::/32 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 2a00:a300::/32 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 2a00:b4c0::/32 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 2a00:bdc0::/36 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 2a00:bdc0:e006::/48 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 2001:4860:4860::8888/128 -i zaborona -o eth0 -j ACCEPT
COMMIT
# Completed on Mon May 22 23:40:37 2017
