config/iptables/iptables.up.rules
# Generated by iptables-save v1.6.1 on Mon May 22 23:40:31 2017
*security
:INPUT ACCEPT [774194:139587074]
:FORWARD ACCEPT [1271636:1161862435]
:OUTPUT ACCEPT [1038297:1198743332]
COMMIT
# Completed on Mon May 22 23:40:31 2017
# Generated by iptables-save v1.6.1 on Mon May 22 23:40:31 2017
*raw
:PREROUTING ACCEPT [2066226:1302732823]
:OUTPUT ACCEPT [1038297:1198743332]
COMMIT
# Completed on Mon May 22 23:40:31 2017
# Generated by iptables-save v1.6.1 on Mon May 22 23:40:31 2017
*nat
:PREROUTING ACCEPT [113192:7534161]
:INPUT ACCEPT [4748:301563]
:OUTPUT ACCEPT [2:133]
:POSTROUTING ACCEPT [2:133]
-A POSTROUTING -s 192.168.224.0/22 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.14.20.0/22 -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon May 22 23:40:31 2017
# Generated by iptables-save v1.6.1 on Mon May 22 23:40:31 2017
*mangle
:PREROUTING ACCEPT [2066227:1302732863]
:INPUT ACCEPT [774571:139609638]
:FORWARD ACCEPT [1291016:1163080273]
:OUTPUT ACCEPT [1038298:1198744266]
:POSTROUTING ACCEPT [2309934:2360606701]
COMMIT
# Completed on Mon May 22 23:40:31 2017
# Generated by iptables-save v1.6.1 on Mon May 22 23:40:31 2017
*filter
:INPUT ACCEPT [773938:139568070]
:FORWARD DROP [16336:1079263]
:OUTPUT ACCEPT [1038298:1198744266]
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -i eth0 -o zaborona -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o eth0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 8.8.8.8/32 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 8.8.4.4/32 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 5.45.192.0/18 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 5.61.16.0/21 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 5.61.232.0/21 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 5.255.192.0/18 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 37.9.64.0/18 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 37.140.128.0/18 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 77.74.176.0/21 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 77.75.152.0/22 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 77.75.159.0/24 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 77.88.0.0/18 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 79.137.157.0/24 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 79.137.183.0/24 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 84.201.128.0/18 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 87.240.128.0/18 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 87.250.224.0/19 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 91.103.64.0/21 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 93.158.128.0/18 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 93.159.224.0/21 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 93.186.224.0/20 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 94.100.176.0/20 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 95.108.128.0/17 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 95.142.192.0/20 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 95.163.32.0/19 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 95.163.248.0/21 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 95.213.0.0/18 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 100.43.64.0/19 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 109.235.160.0/21 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 128.140.168.0/21 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 130.193.32.0/19 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 141.8.128.0/18 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 178.22.88.0/21 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 178.154.128.0/17 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 178.237.16.0/20 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 185.5.136.0/22 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 185.16.148.0/22 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 185.16.244.0/22 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 185.29.130.0/24 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 185.32.185.0/24 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 185.32.186.0/24 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 185.32.248.0/22 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 185.54.220.0/23 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 185.71.76.0/22 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 185.85.12.0/24 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 185.85.14.0/23 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 188.93.56.0/21 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 194.186.63.0/24 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 195.211.20.0/22 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 195.211.128.0/22 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 195.218.168.0/24 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 199.21.96.0/22 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 199.36.240.0/22 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 208.87.94.0/24 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 213.180.192.0/19 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 217.20.144.0/20 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -d 217.69.128.0/20 -i zaborona -o eth0 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 8.8.8.8/32 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 8.8.4.4/32 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 5.45.192.0/18 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 5.61.16.0/21 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 5.61.232.0/21 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 5.255.192.0/18 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 37.9.64.0/18 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 37.140.128.0/18 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 77.74.176.0/21 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 77.75.152.0/22 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 77.75.159.0/24 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 77.88.0.0/18 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 79.137.157.0/24 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 79.137.183.0/24 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 84.201.128.0/18 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 87.240.128.0/18 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 87.250.224.0/19 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 91.103.64.0/21 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 93.158.128.0/18 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 93.159.228.0/22 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 93.186.224.0/20 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 94.100.176.0/20 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 95.108.128.0/17 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 95.142.192.0/20 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 95.163.32.0/19 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 95.163.248.0/21 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 95.213.0.0/18 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 100.43.64.0/19 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 109.235.160.0/21 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 128.140.168.0/21 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 130.193.32.0/19 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 141.8.128.0/18 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 178.22.88.0/21 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 178.154.128.0/17 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 178.237.16.0/20 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 185.5.136.0/22 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 185.16.148.0/22 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 185.16.244.0/22 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 185.29.130.0/24 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 185.32.185.0/24 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 185.32.186.0/24 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 185.32.248.0/22 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 185.54.220.0/23 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 185.71.76.0/22 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 185.85.12.0/24 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 185.85.14.0/23 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 188.93.56.0/21 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 194.186.63.0/24 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 195.211.20.0/22 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 195.211.128.0/22 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 195.218.168.0/24 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 199.21.96.0/22 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 199.36.240.0/22 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 208.87.94.0/24 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 213.180.192.0/19 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 217.20.144.0/20 -j ACCEPT
-A FORWARD -s 10.14.20.0/22 -d 217.69.128.0/20 -j ACCEPT
COMMIT
# Completed on Mon May 22 23:40:31 2017
